WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205170
[LFC][IFC] Fix fast/text/whitespace/023.html
https://bugs.webkit.org/show_bug.cgi?id=205170
Summary
[LFC][IFC] Fix fast/text/whitespace/023.html
alan
Reported
2019-12-12 09:55:58 PST
ssia
Attachments
Patch
(3.61 KB, patch)
2019-12-12 09:58 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-12 09:56:18 PST
<
rdar://problem/57881365
>
alan
Comment 2
2019-12-12 09:58:40 PST
Created
attachment 385506
[details]
Patch
Antti Koivisto
Comment 3
2019-12-12 10:01:18 PST
Comment on
attachment 385506
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385506&action=review
> Source/WebCore/layout/inlineformatting/InlineLineBuilder.cpp:65 > + m_collectExpansionOpportunities = textIsAlignJustify && whitespace != WhiteSpace::Pre && whitespace != WhiteSpace::PreWrap && whitespace != WhiteSpace::BreakSpaces;
Doesn't some combination of whitespace != WhiteSpace::Pre && whitespace != WhiteSpace::PreWrap && whitespace != WhiteSpace::BreakSpaces show up in other places too? Maybe there is or should be a helper?
Antti Koivisto
Comment 4
2019-12-12 10:04:19 PST
Also could factor the into function and initialize from initializer list. , m_collectExpansionOpportunities(computeCollectExpansionOpportunities(m_initialInlineRun.style(), textIsAlignJustify))
alan
Comment 5
2019-12-12 10:05:29 PST
(In reply to Antti Koivisto from
comment #3
)
> Comment on
attachment 385506
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=385506&action=review
> > > Source/WebCore/layout/inlineformatting/InlineLineBuilder.cpp:65 > > + m_collectExpansionOpportunities = textIsAlignJustify && whitespace != WhiteSpace::Pre && whitespace != WhiteSpace::PreWrap && whitespace != WhiteSpace::BreakSpaces; > > Doesn't some combination of whitespace != WhiteSpace::Pre && whitespace != > WhiteSpace::PreWrap && whitespace != WhiteSpace::BreakSpaces show up in > other places too? Maybe there is or should be a helper?
Nope, I had the same feeling and did a grep. We use this property for other reasons too like checking whether the new line is preserved () or whether content wrapping is allowed (WhiteSpace::Pre WhiteSpace::NoWrap)
alan
Comment 6
2019-12-12 10:06:05 PST
(In reply to zalan from
comment #5
)
> (In reply to Antti Koivisto from
comment #3
) > > Comment on
attachment 385506
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=385506&action=review
> > > > > Source/WebCore/layout/inlineformatting/InlineLineBuilder.cpp:65 > > > + m_collectExpansionOpportunities = textIsAlignJustify && whitespace != WhiteSpace::Pre && whitespace != WhiteSpace::PreWrap && whitespace != WhiteSpace::BreakSpaces; > > > > Doesn't some combination of whitespace != WhiteSpace::Pre && whitespace != > > WhiteSpace::PreWrap && whitespace != WhiteSpace::BreakSpaces show up in > > other places too? Maybe there is or should be a helper? > Nope, I had the same feeling and did a grep. We use this property for other > reasons too like checking whether the new line is preserved () or whether > content wrapping is allowed (WhiteSpace::Pre WhiteSpace::NoWrap)
I mean RenderStyle does have a helper.
Antti Koivisto
Comment 7
2019-12-12 10:08:18 PST
> I mean RenderStyle does have a helper.
Yeah, I was probably thinking that.
alan
Comment 8
2019-12-12 10:27:23 PST
Committed
r253435
: <
https://trac.webkit.org/changeset/253435
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug