[LFC][IFC] Fix fast/text/whitespace/023.html https://bugs.webkit.org/show_bug.cgi?id=205170 <rdar://problem/57881365>

Reviewed by Antti Koivisto.

Do not try to find expansion opportunities in content with preserved whitespace.

* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::ContinousContent::ContinousContent):
(WebCore::Layout::LineBuilder::ContinousContent::append):
(WebCore::Layout::LineBuilder::ContinousContent::close):

Canonical link: https://commits.webkit.org/218362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253435 268f45cc-cd09-0410-ab3c-d52691b4dbfc